fixed some alignment issues on larger screens.

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,8 +7,8 @@ nav {
 #address {
     border-radius: 10px;
     border: 3px solid black;
-    width: 98.5%;
     height: 50px;
+    width: 99%;
     margin-left: 0px;
     bottom: -10px;
     margin-bottom: 60px;
@@ -51,8 +51,6 @@ p {
     bottom: -10px;
     background: radial-gradient(circle, #453ddf 0%, #1d999b 100%);
     border-radius: 10px;
-    width: 400px;
-    margin-left: 15px;
     color: black;
 }
 
